# DataLiteracyProject

./: .gitignore  DataAnalysis.ipynb  Literature Review *rough draft  README.md  analysis.py  arxiv_handler.py  author_prediction_analysis.ipynb  csv_dataset_generator.py  environment.yml  get_author_and_paper_data.py  google_scholar_handler.py  main.py  playground.py  process_articles.py  pyproject.toml  retrieve_article_data.py  test_enrichment.py  testing_hypotheses.ipynb  tex_parsing.py  tex_parsing_rules.py  utils.py  visualize_results.py
AuthorPages/: Henning.html  Hinton.html
authortxts/: esalisbury.txt  ghinton.txt  jcunningham.txt  jrhattricksimpers.txt  jshen.txt  jwenger.txt  kmjablonka.txt  phennig.txt  pnorbury.txt  rfreile.txt  vkumar.txt
data/: metadata.csv
data/features/: 0807.4622_features.json  0908.1239_features.json  1106.1746_features.json  1109.4534_features.json  1111.2487_features.json  1207.5301_features.json  1210.2507_features.json  1301.1842_features.json  1405.0907_features.json  1407.5153_features.json  1407.5966_features.json  1407.5967_features.json  1410.3692_features.json  1603.01463_features.json  1604.07700_features.json  1605.07533_features.json  1607.02393_features.json  (+32 more)
src/: analysis.py  data_utils.py  extract_features.py  google_scholar_handler.py  plotting.py  scrape_metadata.py  scrape_paper_ids.py  scrape_text.py  select_authors.py  select_papers.py  style_manager.py  time_lin_regr.py  utils.py  visualize_time_analysis.py
styles/: tuebingen_style.mplstyle
tests/: test_select_authors.py  test_select_papers.py
(+172 files in other folders)
